pkg/xds/generator/testdata/probe/01.envoy.golden.yaml
resources:
- name: probe:listener
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        portValue: 9000
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
            - addressPrefix: ::1
              prefixLen: 128
          routeConfig:
            name: probe:route_configuration
            virtualHosts:
            - domains:
              - '*'
              name: probe
              routes:
              - match:
                  headers:
                  - name: :method
                    stringMatch:
                      exact: GET
                  path: /8080/healthz/probe
                route:
                  cluster: localhost:8080
                  regexRewrite:
                    pattern:
                      regex: .*
                    substitution: /healthz/probe
          statPrefix: probe_listener
    name: probe:listener
    trafficDirection: INBOUND
