pkg/xds/generator/testdata/probe/06.envoy.golden.yaml
resources:
- name: probe:listener
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        portValue: 9000
    enableReusePort: false
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
            - addressPrefix: ::1
              prefixLen: 128
          routeConfig:
            name: probe:route_configuration
            virtualHosts:
            - domains:
              - '*'
              name: probe
              routes:
              - match:
                  headers:
                  - name: :method
                    stringMatch:
                      exact: GET
                  path: /8080/healthz/probe
                route:
<<<<<<< HEAD:pkg/xds/generator/testdata/probe/06.envoy.golden.yaml
                  cluster: self_inbound_dp_8080
                  regexRewrite:
                    pattern:
                      regex: .*
                    substitution: /healthz/probe
          statPrefix: probe_listener
    name: probe:listener
    trafficDirection: INBOUND
=======
                  cluster: kri_mzsvc_default___multi-backend_80
                  timeout: 0s
          statPrefix: default_multi-backend___mzsvc_80
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/unified-name: kri_mzsvc_default___multi-backend_80
    name: outbound:10.0.0.2:80
    trafficDirection: OUTBOUND
>>>>>>> 4c54d6dd2a (feat(xds): unified-name for empty listener tags (#17563)):pkg/plugins/policies/meshhttproute/plugin/v1alpha1/testdata/default-meshmultizoneservice-mesh-scoped-zone.listeners.golden.yaml
